# htd

./: .gitignore  LICENSE  README.md  htd.cabal  stack.yaml
src/cli/: Cli.hs
src/lib/: Printer.hs  ReadWrite.hs  Renderable.hs  Todo.hs  Todos.hs
src/ui/: ConfirmDelete.hs  Editor.hs  ListView.hs  Register.hs  Run.hs  State.hs  Style.hs  TitleView.hs  Util.hs
test/: Lib.hs  Main.hs  ReadWriteTest.hs
