name:                htd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LFDM/htd#readme
license:             MIT
license-file:        LICENSE
author:              LFDM
maintainer:          1986gh@gmail.com
copyright:           2017 LFDM
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

library
  hs-source-dirs:      src/lib
                     , src/ui
  exposed-modules:     ReadWrite
                     , Todo
                     , Todos
                     , Printer
                     , Renderable
                     , Run
                     , Register
                     , State
                     , Style
                     , Util
                     , TitleView
                     , ListView
                     , Editor
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , filepath
                     , split
                     , containers
                     , yaml
                     , lens
                     , bytestring
                     , brick
                     , vty
                     , vector
                     , text-zipper

  default-language:    Haskell2010

executable htd
  hs-source-dirs:      src/cli
  main-is:             Main.hs
  other-modules:       Cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , htd
                     , filepath
  default-language:    Haskell2010

test-suite htd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       ReadWriteTest
  build-depends:       base
                     , htd
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LFDM/htd
